--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -24,7 +24,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="/w3images/avatar_smoke.jpg" style="width:100%">
+  <img src="/static/bike_logo.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -57,9 +57,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">Bikes,</span> Beers, and Barton Springs</h1>
-    <p>Bike Tours with Ben Carneiro</p>
-    <img src="/static/barton.png" alt="boy" class="w3-image" width="992" height="1108">
+    <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
+    <p>Slow cruises through some of Austin's best natural scenery</p>
+    <img src="/static/barton_dive.jpg" alt="boy" class="w3-image" width=100%>
   </header>
 
   <!-- About Section -->
