--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -1,3 +1,72 @@
 <html>
-    <h1>Barton Springs Ride</h1>
-</html>
+    
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+    table, th, td, p, ul {
+                border: 1px solid white;
+                border-collapse: collapse;
+                padding: 10px;
+                background-color: black;
+                color: white
+                }
+    .w3-row-padding img {margin-bottom: 12px}
+    /* Set the width of the sidebar to 120px */
+    .w3-sidebar {width: 120px;background: #222;}
+    /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
+    #main {margin-left: 120px}
+    /* Remove margins from "page content" on small screens */
+    @media only screen and (max-width: 600px) {#main {margin-left: 0}}
+    </style>
+
+    <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+        <h1 class="w3-jumbo">Barton Springs Tour AKA the "Home Run"</h1>
+        <img src="/static/barton_dive.jpg" alt="boy" class="w3-image" width=50%>
+      </header>
+      
+      <body class="w3-black">
+    <h2>
+        The Ride
+    </h2>
+    <p>
+        Lady Bird Lake, or "Town Lake" as old-folks call it, is a massive man-made lake at the convergence of all of the watersheds in central Austin, created by damming the Colorado River. This Bike Tour follows the Shoal Creek watershed/trail down to the lake, crosses the river with a beautiful skyline view, then follows the Barton Creek watershed/trail to the most sacred place in Austin, Barton Springs Pool. The springs are fed by underground water from Edward's Aquifer, meaning the water is a perfect temperature every single day of the year, no matter what the weather is like outside. You will see people swimming even in the coldest weather! The pool was created by damming Barton Creek almost 100 years ago, but legend has it that pre-colonial inhabitants of Austin used the springs as a healing grounds. Jump in the pool and experience its magical healing power. While people swim, ben will provide some light refreshments and snacks in the park area outside the pool grounds. Once we are sufficiently "Chilled-out," we will hop back on our bikes and ride back over the river and through the creek and call it a day. 
+    </p>
+    
+    <h2>
+        How Hard Is It?
+    </h2>
+    <p>
+        The whole experience lasts about three hours. It consists of 1-2 hours of cycling and 1-2 hours of chilling, depending on our pace. The distance is almost exactly ten miles, with just a short distance ridden in the street. Most of the ride is on car-free trails. The route includes pavement, gravel, asphalt, a few minor climbs, and in-general, just a lot of exposure to the outdoors. None of the physical activity could really be considered anything other than easy-to-moderate, but when you're in the Texas Heat, for 2-4 Hours at a time, you have to be conscious of the heat, hydration, and sunburn.
+    </p>
+    <h2>
+        What's Included?
+    </h2>
+    <p>
+        1) A Bike <br>
+        2) A Helmet <br>
+        3) Free Beer / Water <br>
+        4) Free Snacks - Usually Fruit / Cheese / Crackers / Granola Bars <br>
+        5) Sunscreen <br> 
+        6) Towels - but I often dry off just by riding home <br>
+    </p>
+
+    <h2>
+        What Do I Need To Bring?
+    </h2>
+    <p>
+        1) A Swimsuit - I recommend arriving in your swimsuit if you want to swim. I will be in mine for the whole ride. <br>
+        2) ID - if you want to drink my beer. <br>
+        3) Common Sense - Austin is very, very hot. If it's the summer, there is some reasonable expectation that you show up relatively hydrated, and I recommend putting on sunscreen before you arrive. 
+
+    </p>
+    <h2>Where do we meet?</h2>
+    <p>Our Meeting point is a <a href="https://www.google.com/maps/place/2816+Rio+Grande+St,+Austin,+TX+78705">vacant lot at 2816 Rio Grande St, Austin TX 78705</a></p>
+    <h2>Where do I park?</h2>
+    <p>There is paid street parking on Rio Grande, and the street parking just north of 29th street is free. The area is very dense, so leave yourself some time to find a spot!</p>
+    <h2>The Route</h2>
+    <div style="overflow:hidden;position:relative;"><div style="position:relative;width:100%;padding-top:56.25%;overflow:visible;"/><iframe name="plotaroute_map_2490857" src="https://www.plotaroute.com/embedmap/2490857?units=mi" style="position:absolute;top:0;left:0;bottom:0;right:0;width:100%; height:100%;" frameborder="0" scrolling="no" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div></div>
+
+</body>
+    </html>
