add image to homepage, fix some copy on the barotn page

--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -31,7 +31,7 @@
         The Ride
     </h2>
     <p>
-        Lady Bird Lake, or "Town Lake" as old-folks call it, is a massive man-made lake at the convergence of all of the watersheds in central Austin, created by damming the Colorado River. This Bike Tour follows the Shoal Creek watershed/trail down to the lake, crosses the river with a beautiful skyline view, then follows the Barton Creek watershed/trail to the most sacred place in Austin, Barton Springs Pool. The springs are fed by underground water from Edward's Aquifer, meaning the water is a perfect temperature every single day of the year, no matter what the weather is like outside. You will see people swimming even in the coldest weather! The pool was created by damming Barton Creek almost 100 years ago, but legend has it that pre-colonial inhabitants of Austin used the springs as a healing grounds. Jump in the pool and experience its magical healing power. While people swim, ben will provide some light refreshments and snacks in the park area outside the pool grounds. Once we are sufficiently "Chilled-out," we will hop back on our bikes and ride back over the river and through the creek and call it a day. 
+        Lady Bird Lake, or "Town Lake" as old-folks call it, is a massive man-made lake at the convergence of all of the watersheds in central Austin, created by damming the Colorado River. This Bike Tour follows the Shoal Creek watershed/trail down to the lake, crosses the river with a beautiful skyline view, then follows the Barton Creek watershed/trail to the most sacred place in Austin, Barton Springs Pool. The springs are fed by underground water from Edward's Aquifer, meaning the water is a perfect temperature every single day of the year, no matter what the weather is like outside. You will see people swimming even in the coldest weather! The pool was created by damming Barton Creek almost 100 years ago, but legend has it that pre-colonial inhabitants of Austin used the springs as a healing grounds. Jump in the pool and experience its magical healing power. While everyone has the opportunity to swim, we will provide some light refreshments and snacks in the park area outside the pool grounds. Once we are sufficiently "Chilled-out," we will hop back on our bikes and ride back over the river and through the creek and call it a day. 
     </p>
     
     <h2>
@@ -62,9 +62,9 @@
 
     </p>
     <h2>Where do we meet?</h2>
-    <p>Our Meeting point is a <a href="https://www.google.com/maps/place/2816+Rio+Grande+St,+Austin,+TX+78705">vacant lot at 2816 Rio Grande St, Austin TX 78705</a></p>
+    <p>Our Meeting point is a <a target="_blank" href="https://www.google.com/maps/place/2816+Rio+Grande+St,+Austin,+TX+78705">vacant lot at 2816 Rio Grande St, Austin TX 78705</a></p>
     <h2>Where do I park?</h2>
-    <p>There is paid street parking on Rio Grande, and the street parking just north of 29th street is free. The area is very dense, so leave yourself some time to find a spot!</p>
+    <p>I do not have parking, and West Campus is the busiest neighborhood in Texas. There is paid street parking on Rio Grande, and the street parking just north of 29th street is free. Leave yourself some time to find a spot. Transit access to the area isn't terrible, but I recommend walking or calling a cab over taking the bus. </p>
     <h2>The Route</h2>
     <div style="overflow:hidden;position:relative;"><div style="position:relative;width:100%;padding-top:56.25%;overflow:visible;"/><iframe name="plotaroute_map_2490857" src="https://www.plotaroute.com/embedmap/2490857?units=mi" style="position:absolute;top:0;left:0;bottom:0;right:0;width:100%; height:100%;" frameborder="0" scrolling="no" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div></div>
 
