--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 {% csrf_token %}
+{% load static %}
 <html>
 <head>
-<title>Bike Tours</title>
+<title>Hippie City Bike Tours</title>
+<link rel="shortcut icon" type="image/ico" href="{% static 'images/favicon.ico' %}">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
