--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -72,7 +72,7 @@ table, th, td {
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
-    <p>Find Serenity in Austin's Best Natural Scenery</p>
+    <h5>Find Serenity in Austin's Best Natural Scenery</h5>
     <img src="/static/barton_dive.jpg" alt="boy" class="w3-image" width=100%>
   </header>
 
