--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -88,8 +88,11 @@
     <p>I do not have parking, and West Campus is the busiest neighborhood in Texas. There is paid street parking on Rio Grande, and the street parking just north of 29th street is free. Leave yourself some time to find a spot. Transit access to the area isn't terrible, but I recommend walking or calling a cab over taking the bus.</p>
     <h2>How much does it cost?</h2>
     <p>Only $59 for an afternoon down by the creek</p>
+    {% if confirmation %}
+    <h2>I need more tickets</h2>
+    {% else %}
     <h2>How do I sign up?</h2>
-        {% if tour and not confirmation %}
+    {% endif %}
         {% if tour.open_spots %}
         <p>For the tour on {{ tour.day|date:"l, F d, Y - hA" }}, you may register here</p>
         <form action="/create_checkout_session/" method="POST">
@@ -105,9 +108,6 @@
           {% else %}
           <p>Sorry, this tour is sold out, but you can check out our <a href="/#book">bookings page</a> for more tours</p>
           {% endif %}
-        {% else %}
-        <p>Check out our <a href="/#book">bookings page!</a></p>
-        {% endif %}
     <h2>The Route</h2>
     <div style="overflow:hidden;position:relative;"><div style="position:relative;width:100%;padding-top:56.25%;overflow:visible;"/><iframe name="plotaroute_map_2490857" src="https://www.plotaroute.com/embedmap/2490857?units=mi" style="position:absolute;top:0;left:0;bottom:0;right:0;width:100%; height:100%;" frameborder="0" scrolling="no" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div></div>
 
