--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -84,8 +84,8 @@
     <p>
         1) A Swimsuit - I recommend arriving in your swimsuit if you want to swim. I will be in mine for the whole ride. <br>
         2) ID - if you want to drink my beer. <br>
-        3) Common Sense - Austin is very, very hot. If it's the summer, there is some reasonable expectation that you show up relatively hydrated, and I recommend putting on sunscreen before you arrive. 
-
+        3) Common Sense - Austin is very, very hot. If it's the summer, there is some reasonable expectation that you show up relatively hydrated, and I recommend putting on sunscreen before you arrive. <br>
+        4) Please fill out the <a target="_blank" href="https://forms.gle/6Qp8nCk8jsWQS7wv9">liability waiver</a> in advance if you don't want to do it when you get here. 
     </p>
     <h2>Where Do We Meet?</h2>
     <p>Our Meeting point is a <a target="_blank" href="https://www.google.com/maps/place/2816+Rio+Grande+St,+Austin,+TX+78705">vacant lot at 2816 Rio Grande St, Austin TX 78705</a></p>
