--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -173,20 +173,12 @@ table, th, td {
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Meeting Point is in front of vacant lot at 2816 Rio Grande St, Austin TX 78705</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>(512) 632-2715</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> biketours@bencarneiro.com</p>
+      <p><i class="fa fa-wpforms fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> 
+         Sign the <a target="_blank" href="https://forms.gle/6Qp8nCk8jsWQS7wv9">Liability Waiver</a></p>
     </div><br>
   <!-- End CONTACT Section -->
   </div>
   
-    <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer -->
-  </footer>
 
 <!-- END PAGE CONTENT -->
 </div>
