hyperlink the waiver in the description page

--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -90,7 +90,7 @@
     <h2>Where Do We Meet?</h2>
     <p>Our Meeting point is a <a target="_blank" href="https://www.google.com/maps/place/2816+Rio+Grande+St,+Austin,+TX+78705">vacant lot at 2816 Rio Grande St, Austin TX 78705</a></p>
     <h2>When Do We Meet?</h2>
-    <p>Come get your waiver signed and bike seat adjusted around 10:45, so we can roll out around 11AM. The earlier you show up, the more exploring we can do</p>
+    <p>Come get your <a target="_blank" href="https://forms.gle/6Qp8nCk8jsWQS7wv9">waiver</a> signed and bike seat adjusted around 10:45AM, so we can roll out around 11AM. The earlier you show up, the more exploring we can do</p>
    
     <h2>Where Do I Park?</h2>
     <p>I do not have parking, and West Campus is the busiest neighborhood in Texas. There is paid street parking on Rio Grande, and the street parking just north of 29th street is free. Leave yourself some time to find a spot. Transit access to the area isn't terrible, but I recommend walking or calling a cab over taking the bus.</p>
