add tracking to the website

--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -24,7 +24,8 @@
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 800px) {#main {margin: 0}}
     </style>
-
+<head>
+    <script defer src="https://us.umami.is/script.js" data-website-id="aa83b743-bc2b-4587-8c5d-d7954fa4b957"></script>
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <a href="/"><img src="/static/bike_logo.jpg" style="position:absolute;left:0;top:0;width:120px"></a>
 
@@ -42,7 +43,7 @@
         {% endif %}
         <img src="/static/barton_dive.jpg" alt="boy" class="w3-image" width=50%>
       </header>
-      
+      </head>
       <body class="w3-black">
     
 <div class="w3-padding-large" id="main">
