--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -3,7 +3,8 @@
 {% load static %}
 <html>
 <head>
-<title>Hippie City Bike Tours</title>
+  <script defer src="https://us.umami.is/script.js" data-website-id="aa83b743-bc2b-4587-8c5d-d7954fa4b957"></script>
+<title>Austin Bike Tours</title>
 <link rel="shortcut icon" type="image/ico" href="{% static 'images/favicon.ico' %}">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
