add alt description for first photo

--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -74,7 +74,7 @@ table, th, td {
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
     <h5>Find Serenity in Austin's Best Natural Scenery</h5>
-    <img src="/static/barton_dive.jpg" alt="boy" class="w3-image" width=100%>
+    <img src="/static/barton_dive.jpg" alt="A man dives head-first into Barton Springs Pool on a sunny Texas afternoon" class="w3-image" width=100%>
   </header>
 
   <!-- About Tours Section -->
