add alt descriptions to all images

--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -151,15 +151,15 @@ table, th, td {
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/static/bike_skyline.jpg" style="width:100%">
-        <img src="/static/bike_lake.jpg" style="width:100%">
-        <img src="/static/funny_selfie.jpg" style="width:100%">
+        <img src="/static/bike_skyline.jpg" style="width:100%" alt="A red road bike on a boardwalk in front of Austin's Lady Bird Lake and the city skyline">
+        <img src="/static/bike_lake.jpg" style="width:100%" alt="A red road bike on a gravel trail in front of Austin's Lady Bird Lake">
+        <img src="/static/funny_selfie.jpg" style="width:100%" alt="A silly picture of a boy in a colorful sweater riding a bicycle">
       </div>
 
       <div class="w3-half">
-        <img src="/static/geese.jpg" style="width:100%">
-        <img src="/static/lake_skyline.jpg" style="width:100%">
-        <img src="/static/trail_lake.jpg" style="width:100%">
+        <img src="/static/geese.jpg" style="width:100%" alt="Two geese looking over Austin's Lady Bird Lake">
+        <img src="/static/lake_skyline.jpg" style="width:100%" alt="Austin's Skyline reflected over a beautiful body of blue water">
+        <img src="/static/trail_lake.jpg" style="width:100%" alt="A red road bike on a gravel trail in front of Austin's Lady Bird Lake">
       </div>
     <!-- End photo grid -->
     </div>
