change the homepage and add a bunch of resized images to help the site load faster

--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -74,24 +74,50 @@ table, th, td {
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
     <h5>Find Serenity in Austin's Best Natural Scenery</h5>
-    <img src="/static/barton_dive.jpg" alt="A man dives head-first into Barton Springs Pool on a sunny Texas afternoon" class="w3-image" width=100%>
   </header>
+  
 
+  <img src="/static/barton_dive_resized.jpg" alt="A man dives head-first into Barton Springs Pool on a sunny Texas afternoon" class="w3-image" width=100%>
   <!-- About Tours Section -->
+
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">Beers, Bikes, Barton Springs</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p> Austin has more entertainment options than you can shake a stick at, but I think the nicest way to see the city is on our trail network. Come and hang out like the locals do: We bake in the sun, and then we dip in the water, and then we repeat, every day, potentially forever. Come ride bikes among the trees, creeks, and wildlife. <br><br>My main tour is a laid-back cruise, down the Shoal Creek Trail, through Pease Park, over Lady Bird Lake, up Barton Creek, and to the Barton Springs Pool, where we'll have a light picnic and some cold beer. Whether it's winter or summer, you'll have the opportunity to experience the magical healing power of Barton Springs and hang out in the sun before we ride back uptown. This no-cars, no-worries cruise is everything I love about Austin, encapsulated in an afternoon of fun in the sun. 
+    <h2 class="w3-text-light-grey">Hit the Trails!</h2>
+    <hr style="width:100%" class="w3-opacity">
+    <p>Visiting Austin is an excellent opportunity to discover your inner alcoholic, but we actually have very nice parks too!</p>
+    </div>
+  <img src="/static/trail_lake_resized.jpg" alt="boy" class="w3-image" width=100%>
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about2">
+
+    <h2 class="w3-text-light-grey">See the Creek!</h2>
+    <hr style="width:100%" class="w3-opacity">
+    <p>It's very old, and often dry. Kind of like Larry David.</p>
+  </div>
+  <img src="/static/creek_boiz_resized.jpg" alt="boy" class="w3-image" width=100%>
+   
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about3">
+    <h2 class="w3-text-light-grey">Meet the Geese!</h2>
+    <hr style="width:100%" class="w3-opacity">
+    <p>HONK!</p>
+    <!-- <p> Austin has more entertainment options than you can shake a stick at, but I think the nicest way to see the city is on our trail network. Come and hang out like the locals do: We bake in the sun, and then we dip in the water, and then we repeat, every day, potentially forever. Come ride bikes among the trees, creeks, and wildlife. <br><br>My main tour is a laid-back cruise, down the Shoal Creek Trail, through Pease Park, over Lady Bird Lake, up Barton Creek, and to the Barton Springs Pool, where we'll have a light picnic and some cold beer. Whether it's winter or summer, you'll have the opportunity to experience the magical healing power of Barton Springs and hang out in the sun before we ride back uptown. This no-cars, no-worries cruise is everything I love about Austin, encapsulated in an afternoon of fun in the sun.  -->
     </p>
+    
     <!-- <img src="/static/selfie_mopac.jpg" style="width:100%"> -->
   </div>
-  <img src="/static/good_skyline_ben.jpg" alt="boy" class="w3-image" width=100%>
+  <img src="/static/goose_mode_resized.jpg" alt="boy" class="w3-image" width=100%>
+
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about4">
+
+    <h2 class="w3-text-light-grey">See Austin the Right Way!</h2>
+    <hr style="width:100%" class="w3-opacity">
+    </div>
+  
+  <img src="/static/good_skyline_ben_resized.jpg" alt="boy" class="w3-image" width=100%>
 
   <!-- About Ben -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Ben</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p> I've had a lot of odd jobs. I've been a street performer, IT guy, pizza guy, waiter, cashier, software engineer, art curator, camera salesman, bong salesman, and honestly probably some other stuff. This is all just a roundabout way of saying that I'm not terriffic at holding down a normal job. <br><br>I spent a lot of time over the pandemic trying to learn python programming and other computer-boy skills. After four years of staring at the screen and beating my head against the wall, I realized all I really wanted to do was bike to the pool and smoke grass in the big Texas sun. It brings me great joy to relish in Austin's natural wonder. This company is an attempt to materialize the perfect "Austin Slacker Existence," and spend every day exploring the natural beauty of this great town.
+    <hr style="width:100%" class="w3-opacity">
+    <p> I grew up here in Austin. I love biking around our parks and swimming in our creeks and rivers. I've had a lot of odd jobs. At the end of the day, all I really want to do is ride bikes and hang out in the sun.<br><br>It brings me great joy to relish in Austin's natural wonder. This company is an attempt to materialize the perfect "Austin Slacker Existence," and spend every day exploring the beauty of this great town.
     </p>
     <!-- <img src="/static/selfie_mopac.jpg" style="width:100%"> -->
   </div>
@@ -100,7 +126,7 @@ table, th, td {
   <!-- BOOKINGS Section -->
   <div class="w3-padding-64 w3-content w3-text-grey" id="book">
     <h2 class="w3-text-light-grey">Book a Tour</h2>
-    <hr style="width:200px" class="w3-opacity">
+    <hr style="width:100%" class="w3-opacity">
     <table>
       <tr>
           <th>
@@ -146,20 +172,20 @@ table, th, td {
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
     <h2 class="w3-text-light-grey">Photos</h2>
-    <hr style="width:200px" class="w3-opacity">
+    <hr style="width:100%" class="w3-opacity">
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/static/bike_skyline.jpg" style="width:100%" alt="A red road bike on a boardwalk in front of Austin's Lady Bird Lake and the city skyline">
-        <img src="/static/bike_lake.jpg" style="width:100%" alt="A red road bike on a gravel trail in front of Austin's Lady Bird Lake">
-        <img src="/static/funny_selfie.jpg" style="width:100%" alt="A silly picture of a boy in a colorful sweater riding a bicycle">
+        <img src="/static/bike_skyline_resized.jpg" style="width:100%" alt="A red road bike on a boardwalk in front of Austin's Lady Bird Lake and the city skyline">
+        <img src="/static/bike_lake_resized.jpg" style="width:100%" alt="A red road bike on a gravel trail in front of Austin's Lady Bird Lake">
+        <img src="/static/funny_selfie_resized.jpg" style="width:100%" alt="A silly picture of a boy in a colorful sweater riding a bicycle">
       </div>
 
       <div class="w3-half">
-        <img src="/static/geese.jpg" style="width:100%" alt="Two geese looking over Austin's Lady Bird Lake">
-        <img src="/static/lake_skyline.jpg" style="width:100%" alt="Austin's Skyline reflected over a beautiful body of blue water">
-        <img src="/static/trail_lake.jpg" style="width:100%" alt="A red road bike on a gravel trail in front of Austin's Lady Bird Lake">
+        <img src="/static/geese_resized.jpg" style="width:100%" alt="Two geese looking over Austin's Lady Bird Lake">
+        <img src="/static/lake_skyline_resized.jpg" style="width:100%" alt="Austin's Skyline reflected over a beautiful body of blue water">
+        <img src="/static/trail_lake_resized.jpg" style="width:100%" alt="A red road bike on a gravel trail in front of Austin's Lady Bird Lake">
       </div>
     <!-- End photo grid -->
     </div>
@@ -168,7 +194,7 @@ table, th, td {
   <!-- CONTACT Section -->
   <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
     <h2 class="w3-text-light-grey">Contact Me</h2>
-    <hr style="width:200px" class="w3-opacity">
+    <hr style="width:100%" class="w3-opacity">
 
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Meeting Point is in front of vacant lot at 2816 Rio Grande St, Austin TX 78705</p>
