--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -73,7 +73,7 @@ table, th, td {
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
-    <h5>Find Serenity in Austin's Best Natural Scenery</h5>
+    <h5>Drop Out, Find God, Ride Bikes</h5>
   </header>
   
 
@@ -90,7 +90,7 @@ table, th, td {
 
     <h2 class="w3-text-light-grey">See the Creek!</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p>It's very old, and often dry. Kind of like Larry David.</p>
+    <p>Some parts are safe to swim in!</p>
   </div>
   <img src="/static/creek_boiz_resized.jpg" alt="boy" class="w3-image" width=100%>
    
