--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -73,7 +73,7 @@ table, th, td {
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
-    <h5>Drop Out, Find God, Ride Bikes</h5>
+    <h5>DROP OUT | FIND GOD | RIDE BIKES</h5>
   </header>
   
 
