make the lazy loading look nice

--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -79,7 +79,7 @@ table, th, td {
   </header>
   
   <div hx-get="/homepage_image_1" hx-trigger="load">
-    <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+    <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
   </div>
   <!-- <img src="/static/barton_dive_resized.jpg" alt="A man dives head-first into Barton Springs Pool on a sunny Texas afternoon" class="w3-image" width=100%> -->
   <!-- About Tours Section -->
@@ -90,7 +90,7 @@ table, th, td {
     <p>Visiting Austin is an excellent opportunity to discover your inner alcoholic, but we actually have very nice parks too!</p>
     </div>
     <div hx-get="/homepage_image_2" hx-trigger="load">
-      <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+      <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
     </div>
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about2">
 
@@ -99,7 +99,7 @@ table, th, td {
     <p>Some parts are safe to swim in!</p>
   </div>
   <div hx-get="/homepage_image_3" hx-trigger="load">
-    <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+    <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
   </div>
   
    
@@ -113,7 +113,7 @@ table, th, td {
     <!-- <img src="/static/selfie_mopac.jpg" style="width:100%"> -->
   </div>
   <div hx-get="/homepage_image_4" hx-trigger="load">
-    <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+    <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
   </div>
 
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about4">
@@ -123,7 +123,7 @@ table, th, td {
     </div>
   
     <div hx-get="/homepage_image_5" hx-trigger="load">
-      <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+      <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
     </div>
   <!-- About Ben -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
@@ -186,7 +186,7 @@ table, th, td {
 
 
   <div hx-get="/gallery" hx-trigger="load">
-    <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/>
+    <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
   </div>
 
 
