edit pricing and homepage

--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -89,7 +89,7 @@ table, th, td {
     <hr style="width:100%" class="w3-opacity">
     <p>Visiting Austin is an excellent opportunity to discover your inner alcoholic, but we actually have very nice parks too!</p>
     </div>
-    <div hx-get="/homepage_image_2" hx-trigger="load">
+    <div hx-get="/homepage_image_3" hx-trigger="load">
       <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
     </div>
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about2">
@@ -98,7 +98,7 @@ table, th, td {
     <hr style="width:100%" class="w3-opacity">
     <p>Some parts are safe to swim in!</p>
   </div>
-  <div hx-get="/homepage_image_3" hx-trigger="load">
+  <div hx-get="/homepage_image_2" hx-trigger="load">
     <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
   </div>
   
@@ -118,8 +118,9 @@ table, th, td {
 
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about4">
 
-    <h2 class="w3-text-light-grey">See Austin the Right Way!</h2>
+    <h2 class="w3-text-light-grey">See Austin the LOCAL Way!</h2>
     <hr style="width:100%" class="w3-opacity">
+    <p>(Sweat so much you almost DIE!)</p>
     </div>
   
     <div hx-get="/homepage_image_5" hx-trigger="load">
