--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -120,7 +120,7 @@ table, th, td {
 
     <h2 class="w3-text-light-grey">See Austin the LOCAL Way!</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p>(Sweat so much you almost DIE!)</p>
+    <p>(Sweat so much you almost DIE, and then go swimming)</p>
     </div>
   
     <div hx-get="/homepage_image_5" hx-trigger="load">
