edit barton copy and fix time typo

--- a/app/backend/templates/barton.html
+++ b/app/backend/templates/barton.html
@@ -58,7 +58,7 @@
         The Ride
     </h2>
     <p>
-        Lady Bird Lake, or "Town Lake" as old-folks call it, is a massive man-made lake in the center of Austin, created by damming the Colorado River. This Bike Tour follows the Shoal Creek Trail south, through Pease Park, Downtown, over Lady Bird Lake with a beautiful skyline view, up the Barton Creek Trail, to the most sacred place in Austin, Barton Springs Pool. The springs/pool are fed by underground water from Edward's Aquifer, meaning the water is a perfect temperature every single day of the year. You will see people swimming even in the coldest weather! The pool was created by damming Barton Creek almost 100 years ago, but legend has it that pre-colonial inhabitants of Austin used the springs as a healing grounds. Jump in the pool and experience its magical healing power. While everyone has the opportunity to swim, we will provide some light refreshments and snacks in the park area outside the pool grounds. Once we are sufficiently "Chilled-out," we will hop back on our bikes and ride back over the river and through the creek and call it a day. 
+        This Bike Tour follows the Shoal Creek Trail south, through Pease Park, Downtown, over Lady Bird Lake with a beautiful skyline view, up the Barton Creek Trail, to the most sacred place in Austin, Barton Springs Pool. The springs/pool are fed by underground water from Edward's Aquifer, meaning the water is a perfect temperature every single day of the year. The pool was created by damming Barton Creek almost 100 years ago, but legend has it that pre-colonial inhabitants of Austin used the springs as a healing grounds. Jump in the pool and experience its magical healing power. Once we are sufficiently "Chilled-out," we will hop back on our bikes, ride back through the creek, and call it a day. 
     </p>
     
     <h2>
@@ -89,7 +89,7 @@
     <h2>Where Do We Meet?</h2>
     <p>Our Meeting point is a <a target="_blank" href="https://www.google.com/maps/place/2816+Rio+Grande+St,+Austin,+TX+78705">vacant lot at 2816 Rio Grande St, Austin TX 78705</a></p>
     <h2>When Do We Meet?</h2>
-    <p>Come get your <a target="_blank" href="https://forms.gle/6Qp8nCk8jsWQS7wv9">waiver</a> signed and bike seat adjusted around 10:45AM, so we can roll out around 11AM. The earlier you show up, the more exploring we can do</p>
+    <p>Come get your <a target="_blank" href="https://forms.gle/6Qp8nCk8jsWQS7wv9">waiver</a> signed and bike seat adjusted around 8:45AM, so we can roll out around 9AM. The earlier you show up, the more exploring we can do</p>
    
     <h2>Where Do I Park?</h2>
     <p>I do not have parking, and West Campus is the busiest neighborhood in Texas. There is paid street parking on Rio Grande, and the street parking just north of 29th street is free. Leave yourself some time to find a spot. Transit access to the area isn't terrible, but I recommend walking or calling a cab over taking the bus.</p>
