--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -201,7 +201,7 @@ table, th, td {
 
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Meeting Point is in front of vacant lot at 2816 Rio Grande St, Austin TX 78705</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>(512) 632-2715</p>
+      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>(512) 632-2715 (text me)</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> biketours@bencarneiro.com</p>
       <p><i class="fa fa-wpforms fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> 
          Sign the <a target="_blank" href="https://forms.gle/6Qp8nCk8jsWQS7wv9">Liability Waiver</a></p>
