--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -75,28 +75,32 @@ table, th, td {
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Hippie City Bike Tours</h1>
-    <h5>DROP OUT | FIND GOD | RIDE BIKES</h5>
+<h4>From Shoal Creek To Barton Springs!</h4>
   </header>
   
-  <div hx-get="/homepage_image_1" hx-trigger="load">
+  <div hx-get="/homepage_image_5" hx-trigger="load">
     <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
   </div>
   <!-- <img src="/static/barton_dive_resized.jpg" alt="A man dives head-first into Barton Springs Pool on a sunny Texas afternoon" class="w3-image" width=100%> -->
   <!-- About Tours Section -->
 
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">Hit the Trails!</h2>
+    <h2 class="w3-text-light-grey">DO YOU LIKE RIDING BIKES?</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p>Visiting Austin is an excellent opportunity to discover your inner alcoholic, but we actually have very nice parks too!</p>
+    <h2> <a href="mailto:biketours@bencarneiro.com">BOOK A TOUR</a></h2>
+    <!-- <p>Visiting Austin is an excellent opportunity to discover your inner alcoholic, but we actually have very nice parks too!</p> -->
     </div>
+    
     <div hx-get="/homepage_image_3" hx-trigger="load">
       <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
     </div>
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about2">
 
-    <h2 class="w3-text-light-grey">See the Creek!</h2>
+    <h2 class="w3-text-light-grey">DO YOU LOVE URBAN WATERWAYS?</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p>Some parts are safe to swim in!</p>
+
+    <h2> <a href="mailto:biketours@bencarneiro.com">BOOK A TOUR</a></h2>
+    <!-- <p>Some parts are safe to swim in!</p> -->
   </div>
   <div hx-get="/homepage_image_2" hx-trigger="load">
     <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
@@ -104,9 +108,11 @@ table, th, td {
   
    
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about3">
-    <h2 class="w3-text-light-grey">Meet the Geese!</h2>
+    <h2 class="w3-text-light-grey">WOULD YOU GANDER AT A GOOSE?</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p>HONK!</p>
+
+    <h2> <a href="mailto:biketours@bencarneiro.com">BOOK A TOUR</a></h2>
+    <!-- <p>HONK!</p> -->
     <!-- <p> Austin has more entertainment options than you can shake a stick at, but I think the nicest way to see the city is on our trail network. Come and hang out like the locals do: We bake in the sun, and then we dip in the water, and then we repeat, every day, potentially forever. Come ride bikes among the trees, creeks, and wildlife. <br><br>My main tour is a laid-back cruise, down the Shoal Creek Trail, through Pease Park, over Lady Bird Lake, up Barton Creek, and to the Barton Springs Pool, where we'll have a light picnic and some cold beer. Whether it's winter or summer, you'll have the opportunity to experience the magical healing power of Barton Springs and hang out in the sun before we ride back uptown. This no-cars, no-worries cruise is everything I love about Austin, encapsulated in an afternoon of fun in the sun.  -->
     </p>
     
@@ -118,19 +124,21 @@ table, th, td {
 
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about4">
 
-    <h2 class="w3-text-light-grey">See Austin the LOCAL Way!</h2>
+    <h2 class="w3-text-light-grey">WANT TO SWIM IN THE TEXAS HEAT?</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p>(Sweat so much you almost DIE, and then go swimming)</p>
+
+    <h2> <a href="mailto:biketours@bencarneiro.com">BOOK A TOUR</a></h2>
+    <!-- <p>(Sweat so much you almost DIE, and then go swimming)</p> -->
     </div>
   
-    <div hx-get="/homepage_image_5" hx-trigger="load">
+    <div hx-get="/homepage_image_1" hx-trigger="load">
       <!-- <img  alt="Result loading..." class="htmx-indicator" width="150" src="https://htmx.org/img/bars.svg"/> -->
     </div>
   <!-- About Ben -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Ben</h2>
     <hr style="width:100%" class="w3-opacity">
-    <p> I grew up here in Austin. I love biking around our parks and swimming in our creeks and rivers. I've had a lot of odd jobs. At the end of the day, all I really want to do is ride bikes and hang out in the sun.<br><br>It brings me great joy to relish in Austin's natural wonder. This company is an attempt to materialize the perfect "Austin Slacker Existence," and spend every day exploring the beauty of this great town.
+    <p>I like bikes.<br><br> I run a few websites about cities and transportation. <a href="https://roadway.report">roadway.report</a> is a nationwide vision-zero map. I am also the founder of <a href="https://censusmaps.org">censusmaps.org</a>, <a href="https://transit.observer">transit.observer</a>, and <a href="https://draft.support">draft.support</a>.<br><br> Austin is great, and I would love to show you around.
     </p>
     <!-- <img src="/static/selfie_mopac.jpg" style="width:100%"> -->
   </div>
@@ -138,9 +146,11 @@ table, th, td {
 
   <!-- BOOKINGS Section -->
   <div class="w3-padding-64 w3-content w3-text-grey" id="book">
-    <h2 class="w3-text-light-grey">Book a Tour</h2>
+    <h2 class="w3-text-light-grey"><a href="mailto:biketours@bencarneiro.com">Book a Tour?</a></h2>
     <hr style="width:100%" class="w3-opacity">
-    <table>
+
+    <h2> <a href="mailto:biketours@bencarneiro.com">BOOK A TOUR</a></h2>
+    <!-- <table>
       <tr>
           <th>
               Day
@@ -177,7 +187,7 @@ table, th, td {
           </td>
       </tr>
       {% endfor %}
-     </table> 
+     </table>  -->
     
     <!-- End BOOKING Section -->
   </div>
