--- a/app/backend/templates/home.html
+++ b/app/backend/templates/home.html
@@ -1,38 +1,47 @@
-<!DOCTYPE html>
+
+<head>
+  <title>Austin Bike Tours</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Ben Carneiro gives bike tours of Austin, TX from the west campus neighborhood. The tours are through Pease Park and Shoal Creek, and are largely car-free. They end at Barton Springs Pool. ">
+  <meta name="keywords" content="bicycle, bike, bicycles, bikes, bike tours, biketours, bicycle tours, bicycletours, austin tours, austin bike tours, austin bicycle tours, austin bikes, austin bicycles, austin bicycling, austin cycling, cycling, cyclists, austin cyclists, bike tours near me, bicycle tours near me, bikes near me, bicycles near me, bike rental, bicycle rentals, bike rentals, bicylce rental, rent bikes, citibike, scooter tours">
+  <meta name="author" content="Ben Carneiro">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+</head>
 {% csrf_token %}
 {% load static %}
-<html>
-<head>
-  <script defer src="https://us.umami.is/script.js" data-website-id="aa83b743-bc2b-4587-8c5d-d7954fa4b957"></script>
-  <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
-<title>Austin Bike Tours</title>
-<link rel="shortcut icon" type="image/ico" href="{% static 'images/favicon.ico' %}">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
 
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-table, th, td {
-            border: 1px solid white;
-            border-collapse: collapse;
-            padding: 10px;
-            background-color: black;
-            color: white
-            }
-.w3-row-padding img {margin-bottom: 12px}
-/* Set the width of the sidebar to 120px */
-.w3-sidebar {width: 120px;background: #222;}
-/* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-#main {margin-left: 120px}
-/* Remove margins from "page content" on small screens */
-@media only screen and (max-width: 600px) {#main {margin-left: 0}}
-</style>
-</head>
+  <script defer src="https://us.umami.is/script.js" data-website-id="aa83b743-bc2b-4587-8c5d-d7954fa4b957"></script>
+  
+
+<!-- <meta charset="UTF-8"> -->
 <body class="w3-black">
 
+  <link rel="shortcut icon" type="image/ico" href="{% static 'images/favicon.ico' %}">
+
+<style>
+
+  body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+  table, th, td {
+              border: 1px solid white;
+              border-collapse: collapse;
+              padding: 10px;
+              background-color: black;
+              color: white
+              }
+  .w3-row-padding img {margin-bottom: 12px}
+  /* Set the width of the sidebar to 120px */
+  .w3-sidebar {width: 120px;background: #222;}
+  /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
+  #main {margin-left: 120px}
+  /* Remove margins from "page content" on small screens */
+  @media only screen and (max-width: 600px) {#main {margin-left: 0}}
+  </style>
+  <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
@@ -136,7 +145,7 @@ table, th, td {
     </div>
   <!-- About Ben -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">About Ben</h2>
+    <h2 class="w3-text-light-grey">About Ben Carneiro</h2>
     <hr style="width:100%" class="w3-opacity">
     <p>I like bikes.<br><br> I run a few websites about cities and transportation. <a href="https://roadway.report">roadway.report</a> is a nationwide vision-zero map. I am also the founder of <a href="https://censusmaps.org">censusmaps.org</a>, <a href="https://transit.observer">transit.observer</a>, and <a href="https://draft.support">draft.support</a>.<br><br> Austin is great, and I would love to show you around.
     </p>
@@ -224,4 +233,3 @@ table, th, td {
 </div>
 
 </body>
-</html>
